# icyowl-farm

./: .gitignore  README.md  adduser.py  app.py  data_migration.py  pyproject.toml  requirements.txt  requirements_.txt
farm/: __init__.py  auth.py  db.py  document.py  fields.py  growth.py  models.py  records.py  sidebar.py  species.py  variety.py
farm/static/: style.css
farm/templates/: base.html  document.html  fields.html  growth-records.html  index.html  login.html  records.html  sidebar.html
farm/templates/forms/: document.html  growth.html  records.html  species.html  variety.html
farm/templates/includes/: micro-document-plus.html  micro-folder-open.html  micro-folder-plus.html  micro-hashtag.html
farm/templates/macros/: content_title.html  record.html  subtitle.html
tests/: conftest.py  test_auth.py  test_factory.py  test_models.py  test_sidebar.py  test_species.py
