[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'farm'
readme = 'README.md'
license = 'MIT'
version = '0.1'
description = 'The farm management app.'
dependencies = [
  'flask',
  'gunicorn',
  'Flask-WTF',
  'Flask-PyMongo',
  'pydantic', 
  'Pillow',
  'markdown'
]

[project.optional-dependencies]
test = ['pytest', 'pytest-cov']
dev = ['flake8', 'mypy']

[tool.setuptools.package-dir]
farm = 'farm'